--- a/demo.html
+++ b/demo.html
@@ -7,6 +7,8 @@
     <script src="../platform/platform.js"></script>
 
     <link rel="import" href="urban-notification-bar.html">
+    <link rel="import" href="../urban-icons/urban-icons.html">
+    <link rel="import" href="../core-icon/core-icon.html">
 
     <style media="screen">
         body {
@@ -45,6 +47,20 @@
             text-shadow: 0px 2px 1px rgba( 0, 0, 0, .25 );
         }
 
+        core-icon + span {
+            margin-left: 8px;
+        }
+
+        #icon core-icon {
+            width: 20px;
+            height: 20px;
+            top: -1px;
+        }
+
+        #multi span {
+            display:inline-block;
+        }
+
 
 
     </style>
@@ -65,9 +81,7 @@
 
         <h3>Notification with more complex content <span><a data-target="#icon" data-action="show">show</a>|<a data-target="#icon" data-action="hide">hide</a></span></h3>
         <urban-notification id="icon">
-            <div class="wrap">
-                <core-icon icon="urban:attention"></core-icon><span>This is a notification</span>
-            </div>
+            <div><core-icon icon="urban:attention"></core-icon><span>This is a notification</span></div>
         </urban-notification>
 
         <h3>Notification with multiple content roots <span><a data-target="#multi" data-action="show">show</a>|<a data-target="#multi" data-action="hide">hide</a></span></h3>
