#add - bar animation

--- a/demo.html
+++ b/demo.html
@@ -76,7 +76,7 @@
 
         <h3>Simple notification <span><a data-target="#notification" data-action="show">show</a>|<a data-target="#notification" data-action="hide">hide</a></span></h3>
         <urban-notification-bar id="notification">
-            <div class="inline">This is a notification</div>
+            <div>This is a notification</div>
         </urban-notification-bar>
 
         <h3>Notification with more complex content <span><a data-target="#icon" data-action="show">show</a>|<a data-target="#icon" data-action="hide">hide</a></span></h3>
