--- a/urban-notification-bar.html
+++ b/urban-notification-bar.html
@@ -19,7 +19,7 @@ Animating notification bar element.
 
         <link rel="stylesheet" href="urban-notification-bar.css" />
 
-        <div id="container" class="transparent">
+        <div id="container">
             <content></content>
         </div>
 
