#update - timing for complex content

--- a/demo.html
+++ b/demo.html
@@ -80,14 +80,14 @@
         </urban-notification-bar>
 
         <h3>Notification with more complex content <span><a data-target="#icon" data-action="show">show</a>|<a data-target="#icon" data-action="hide">hide</a></span></h3>
-        <urban-notification id="icon">
+        <urban-notification-bar id="icon">
             <div><core-icon icon="urban:attention"></core-icon><span>This is a notification</span></div>
-        </urban-notification>
+        </urban-notification-bar>
 
         <h3>Notification with multiple content roots <span><a data-target="#multi" data-action="show">show</a>|<a data-target="#multi" data-action="hide">hide</a></span></h3>
-        <urban-notification id="multi">
+        <urban-notification-bar id="multi">
             <span>N</span><span>o</span><span>t</span><span>i</span><span>f</span><span>i</span><span>c</span><span>a</span><span>t</span><span>i</span><span>o</span><span>n</span>
-        </urban-notification>
+        </urban-notification-bar>
 
     </div>
 
