--- a/demo.html
+++ b/demo.html
@@ -24,6 +24,11 @@
             max-width: 520px;
         }
 
+        .inner-container {
+            margin: 0 auto;
+            width: 420px;
+        }
+
         h3 {
             margin-top: 2em;
         }
@@ -47,8 +52,8 @@
             text-shadow: 0px 2px 1px rgba( 0, 0, 0, .25 );
         }
 
-        core-icon + span {
-            margin-left: 8px;
+        core-icon {
+            margin-right: 8px;
         }
 
         #icon core-icon {
@@ -61,6 +66,38 @@
             display:inline-block;
         }
 
+        #large {
+            text-align: left;
+        }
+
+        #large core-icon {
+            width: 32px;
+            height: 32px;
+            top: -2px;
+        }
+
+        #large h3 {
+            margin-top: .5em;
+            margin-bottom: .4em;
+        }
+
+        #large p {
+            padding-left: 40px;
+            margin-top: 0;
+            margin-bottom: .4em;
+        }
+
+        #large .purple {
+            color: #7D397A;
+        }
+
+        #large .pink {
+            color: #E81D62;
+        }
+
+        #large span {
+            font-weight: 600;
+        }
 
 
     </style>
@@ -87,6 +124,14 @@
         <h3>Notification with multiple content roots <span><a data-target="#multi" data-action="show">show</a>|<a data-target="#multi" data-action="hide">hide</a></span></h3>
         <urban-notification-bar id="multi">
             <span>N</span><span>o</span><span>t</span><span>i</span><span>f</span><span>i</span><span>c</span><span>a</span><span>t</span><span>i</span><span>o</span><span>n</span>
+        </urban-notification-bar>
+
+        <h3>Notification with larger content <span><a data-target="#large" data-action="show">show</a>|<a data-target="#large" data-action="hide">hide</a></span></h3>
+        <urban-notification-bar id="large">
+            <div class="inner-container"><h3><core-icon icon="urban:attention"></core-icon>Attention</h3></div>
+            <div class="inner-container"><p>The previous method you used to build stuff for the web is old.</p></div>
+            <div class="inner-container"><p><span class="pink">Web components</span> are the bomb.</p></div>
+            <div class="inner-container"><p><span class="purple">Polymer</span> is the way forward.</p></div>
         </urban-notification-bar>
 
     </div>
