#fix - mobile friendly notifications

--- a/demo.html
+++ b/demo.html
@@ -26,7 +26,8 @@
 
         .inner-container {
             margin: 0 auto;
-            width: 420px;
+            width: 100%;
+            max-width: 420px;
         }
 
         h3 {
