#update - use bezier timing for delayed animations

--- a/urban-notification-bar.html
+++ b/urban-notification-bar.html
@@ -19,6 +19,8 @@ Animating notification bar element.
 
         <link rel="stylesheet" href="urban-notification-bar.css" />
 
+        <bezier-easing id="bezier" x1=".75" x2=".2" y1="1" y2=".76"></bezing-easing>
+
         <div id="container">
             <content></content>
         </div>
