#fix - explicitly add dependency on bezier-easing

--- a/urban-notification-bar.html
+++ b/urban-notification-bar.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../urban-notification/urban-notification.html">
+<link rel="import" href="../bezier-easing/bezier-easing.html">
 
 <!--
 Animating notification bar element.
